--- a/class-01-jquery-and-the-dom/pair-assignment/starter-code/index.html
+++ b/class-01-jquery-and-the-dom/pair-assignment/starter-code/index.html
@@ -34,6 +34,7 @@
             </header>
             <section class="article-body"></section>
           </article>
+          <hr>
         </section>
       </div>
     </main>
@@ -41,6 +42,8 @@
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
 
-    <!-- // TODO: Include any/all needed script tags -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="scripts/blogArticles.js"></script>
+<script src="scripts/article.js"></script>
   </body>
 </html>
